--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                      <div class="header-text">
                         <h2><br></h2>
                         <h1>The 3rd IEEE/ACM International Workshop on Network-Aware Big Data Computing (NEAC'21)</h1>
-                        <h2>co-located with <a href="http://cloudbus.org/ccgrid2021/" target="_blank">CCGrid'21</a>, 11th - 14th Of May, Melbourne, Australia.</h2>
+                        <h2>co-located with <a href="http://cloudbus.org/ccgrid2021/" target="_blank">CCGrid'21</a>, 10th - 13th Of May, Melbourne, Australia.</h2>
                         <h2><a href="download/2021_NEAC.pdf" target="_blank">Download CFP</a></h2>
                         <h2><br></h2>
                      </div>
@@ -117,7 +117,7 @@ achieved by using the state-of-the-art methods, designed in the research domains
                   <h4>
                      <ul>
                         <br/>
-                        <li>Submission Dealine: <s>Feb 14th, 2021</s></li>
+                        <li>Submission Dealine: Feb 14th, 2021</li>
                         <br/>
                         <li> Author Notification: Feb 28th, 2021</li>
                         <br/>
