--- a/index.html
+++ b/index.html
@@ -140,23 +140,18 @@ achieved by using the state-of-the-art methods, designed in the research domains
                      <br>
                      <h3>Program Committee</h3>
                      <br>
-                     <h4> Aymen Azouz, Oracle, Ireland</h4>
-                     <h4> Leandro Almeida, Federal Technological University of Parana, Brazil</h4>
-                     <h4> Dick Epema, Delft University of Technology, Netherlands</h4>
-                     <h4> Yang Hu, National University of Defense Technology, China</h4>
-                     <h4> Zhuozhao Li, University of Chicago, USA</h4>
+                     <h4> Alexandru Uta, Leiden University, Netherlands</h4>
                      <h4> Cong Liu, Shandong University of Technology, China</h4>
-                     <h4> Jinwei Liu, Florida A&M University, USA</h4>
-                     <h4> Liam Murphy, University College Dublin, Ireland</h4>
-                     <h4> Radu Prodan, University of Klagenfurt, Austria</h4>
-                     <h4> Lukas Rupprecht, IBM Research Almaden, USA</h4>
-                     <h4> Ilias Tachmazidis, University of Huddersfield, UK</h4>
-                     <h4> Alexandru Uta, Vrije Universiteit Amsterdam, Netherlands</h4>
+                     <h4> Dick Epema, Delft University of Technology, Netherlands</h4>
                      <h4> Shen Wang, University College Dublin, Ireland</h4>
-                     <h4> Ying Wang, Institute of Computing Technology, CAS, China</h4>
+                     <h4> Ilias Tachmazidis, University of Huddersfield, UK</h4>
+                     <h4> Jinwei Liu, Florida A&M University, USA</h4>
+                     <h4> Lukas Rupprecht, IBM Research Almaden, USA</h4>
+                     <h4> Leandro Almeida, Federal Technological University of Parana, Brazil</h4>
                      <h4> Lei Yang, South China University of Technology, China</h4>
-                     <h4> Murat Yilmaz, Dublin City University, Ireland</h4>
-                     <h4> Madhusanka Liyanage, University College Dublin, Ireland</h4>
+                     <h4> Radu Prodan, University of Klagenfurt, Austria</h4>
+                     <h4> Ying Wang, Institute of Computing Technology, CAS, China</h4>
+                     <h4> Zhuozhao Li, University of Chicago, USA</h4>
                      <br>
                      
                      <h3>Publicity Chair</h3>
@@ -183,6 +178,7 @@ achieved by using the state-of-the-art methods, designed in the research domains
                <div class="container">
                   <h2>Sponsors</h2>
                   <div class="row">
+                     <!--
                      <a href="#">
                      <img src="sponsors/sp0.png" style="width:12%"  alt="brand-image" hspace="60" />
                      </a>
@@ -191,6 +187,10 @@ achieved by using the state-of-the-art methods, designed in the research domains
                      </a>
                      <a href="#">
                      <img src="sponsors/sp3.png"  style="width:10%" alt="brand-image" hspace="100" />
+                     </a>
+                     -->
+                     <a href="#">
+                     <img src="sponsors/sp5.png" style="width:10%"  alt="brand-image" hspace="260" />
                      </a>
                      <a href="#">
                      <img src="sponsors/sp4.png"  style="width:10%" alt="brand-image"  />
