--- a/index.html
+++ b/index.html
@@ -139,19 +139,20 @@ achieved by using the state-of-the-art methods, designed in the research domains
                      <h4>Zhiming Zhao, University of Amsterdam, Netherlands</h4>
                      <br>
                      <h3>Program Committee</h3>
-                     <br>
-                     <h4> Alexandru Uta, Leiden University, Netherlands</h4>
-                     <h4> Cong Liu, Shandong University of Technology, China</h4>
-                     <h4> Dick Epema, Delft University of Technology, Netherlands</h4>
-                     <h4> Shen Wang, University College Dublin, Ireland</h4>
-                     <h4> Ilias Tachmazidis, University of Huddersfield, UK</h4>
-                     <h4> Jinwei Liu, Florida A&M University, USA</h4>
-                     <h4> Lukas Rupprecht, IBM Research Almaden, USA</h4>
+                     <br>                
                      <h4> Leandro Almeida, Federal Technological University of Parana, Brazil</h4>
-                     <h4> Lei Yang, South China University of Technology, China</h4>
-                     <h4> Radu Prodan, University of Klagenfurt, Austria</h4>
-                     <h4> Ying Wang, Institute of Computing Technology, CAS, China</h4>
+                     <h4> Dick Epema, Delft University of Technology, Netherlands</h4>
+                     <h4> Jianbin Li, North China Electric Power University, Beijing, China</h4>
                      <h4> Zhuozhao Li, University of Chicago, USA</h4>
+                     <h4> Cong Liu, Shandong University of Technology, China</h4>
+                     <h4> Jinwei Liu, Florida A&M University, USA</h4>
+                     <h4> Radu Prodan, University of Klagenfurt, Austria</h4>
+                     <h4> Lukas Rupprecht, IBM Research Almaden, USA</h4>
+                     <h4> Ilias Tachmazidis, University of Huddersfield, UK</h4>
+                     <h4> Alexandru Uta, Leiden University, Netherlands</h4>
+                     <h4> Shen Wang, University College Dublin, Ireland</h4>
+                     <h4> Ying Wang, Institute of Computing Technology, CAS, China</h4>
+                     <h4> Lei Yang, South China University of Technology, China</h4>
                      <br>
                      
                      <h3>Publicity Chair</h3>
@@ -165,7 +166,6 @@ achieved by using the state-of-the-art methods, designed in the research domains
                      <h4>Qingzhi Liu, Wageningen University & Research, Netherlands</h4>    
                      <h4>Yifeng Huang, North China Electric Power University, Beijing, China</h4>               
                      <br>
-
 
                      <h3>Web Chair</h3>
                      <br>
@@ -190,7 +190,7 @@ achieved by using the state-of-the-art methods, designed in the research domains
                      </a>
                      -->
                      <a href="#">
-                     <img src="sponsors/sp5.png" style="width:10%"  alt="brand-image" hspace="260" />
+                     <img src="sponsors/sp5.png" style="width:10%"  alt="brand-image" hspace="320" />
                      </a>
                      <a href="#">
                      <img src="sponsors/sp4.png"  style="width:10%" alt="brand-image"  />
