--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ achieved by using the state-of-the-art methods, designed in the research domains
                         <br/>
                         <li>Camera-Ready Due: Mar 5th, 2021</li>
                         <br/>
-                        <li>Workshop Date: May 11th, 2021</li>
+                        <li>Workshop Date: May 10th, 2021</li>
                         <br/>
                      </ul>
                   </h4>
@@ -142,6 +142,7 @@ achieved by using the state-of-the-art methods, designed in the research domains
                      <br>                
                      <h4> Leandro Almeida, Federal Technological University of Parana, Brazil</h4>
                      <h4> Dick Epema, Delft University of Technology, Netherlands</h4>
+                     <h4> Spyros Kotoulas, Facebook, UK</h4>
                      <h4> Jianbin Li, North China Electric Power University, Beijing, China</h4>
                      <h4> Zhuozhao Li, University of Chicago, USA</h4>
                      <h4> Cong Liu, Shandong University of Technology, China</h4>
