--- a/index.html
+++ b/index.html
@@ -181,21 +181,20 @@ achieved by using the state-of-the-art methods, designed in the research domains
                   <div class="row">
                      <!--
                      <a href="#">
-                     <img src="sponsors/sp0.png" style="width:12%"  alt="brand-image" hspace="60" />
-                     </a>
-                     <a href="#">
-                     <img src="sponsors/sp2.jpg"  style="width:7%" alt="brand-image" hspace="40" />
-                     </a>
-                     <a href="#">
-                     <img src="sponsors/sp3.png"  style="width:10%" alt="brand-image" hspace="100" />
-                     </a>
-                     -->
-                     <a href="#">
                      <img src="sponsors/sp5.png" style="width:10%"  alt="brand-image" hspace="320" />
                      </a>
                      <a href="#">
                      <img src="sponsors/sp4.png"  style="width:10%" alt="brand-image"  />
                      </a>
+                     -->
+		     <div align="center">
+                        <a href="#">
+                        <img src="sponsors/sp5.png" style="width:10%"  alt="brand-image" hspace="10"/>
+                        </a>
+                        <a href="#">
+                        <img src="sponsors/sp4.png"  style="width:10%" alt="brand-image" />
+                        </a>
+                     </div> 
                   </div>
                </div>
             </div>
