--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ achieved by using the state-of-the-art methods, designed in the research domains
                   <h4>
                      <ul>
                         <br/>
-                        <li>Submission Dealine: Feb 14th, 2021</li>
+                        <li>Submission Dealine: <s>Feb 14th, 2021</s> (<font color=#EA2C08>extended to Feb 21st, 2021</font>)</li>
                         <br/>
                         <li> Author Notification: Feb 28th, 2021</li>
                         <br/>
