--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                   <h2>NEWS</h2>
                   <h4>
                      <ul>
+                        <li>2021.02.28 - Follow the updates of CCGrid, NEAC'21 will be held Virtually. </li>
+                        <br>
                         <li>2020.12.28 - The same as <a href="http://neac2019.ucd.ie/" target="_blank">NEAC'19</a>, there will be a  <font color=#81bb05>Best Paper Award</font>  for the papers presented at NEAC'21. </li>
                         <br>
                         <li>2020.12.15 - All accepted papers will be published in the Proceedings of the 21st IEEE/ACM International Symposium in Cluster, Cloud, and Grid Computing,
@@ -119,9 +121,9 @@ achieved by using the state-of-the-art methods, designed in the research domains
                         <br/>
                         <li>Submission Dealine: <s>Feb 14th, 2021</s> (<font color=#EA2C08>extended to Feb 21st, 2021</font>)</li>
                         <br/>
-                        <li> Author Notification: Feb 28th, 2021</li>
+                        <li> Author Notification: <s>Feb 28th, 2021</s>(<font color=#EA2C08>extended to Mar 3rd, 2021</font>) </li>
                         <br/>
-                        <li>Camera-Ready Due: Mar 5th, 2021</li>
+                        <li>Camera-Ready Due: <s>Mar 5th, 2021</s>(<font color=#EA2C08>extended to Mar 15th, 2021</font>)</li>
                         <br/>
                         <li>Workshop Date: May 10th, 2021</li>
                         <br/>
