--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                   <h2>NEWS</h2>
                   <h4>
                      <ul>
+                        <li>2021.03.15 - 2 High-Quality Papers (out of 9) were accepted by NEAC'21. </li>
+                        <br>
                         <li>2021.02.28 - Follow the updates of CCGrid, NEAC'21 will be held Virtually. </li>
                         <br>
                         <li>2020.12.28 - The same as <a href="http://neac2019.ucd.ie/" target="_blank">NEAC'19</a>, there will be a  <font color=#81bb05>Best Paper Award</font>  for the papers presented at NEAC'21. </li>
